--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Rotating Navigation</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="circle-container">
+            <div class="circle">
+                <button id="close">
+                    <i class="fas fa-times"></i>
+                </button>
+                <button id="open">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="content">
+            <h1>Dope Article</h1>
+            <small>Mister Man</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consequuntur illo voluptatibus cumque consequatur nisi recusandae veritatis laborum dolores eos odio aliquam nihil quae, ipsam numquam nemo sunt veniam iure? Itaque totam ut consequuntur provident officia quidem, voluptates autem error dolore nihil, nemo consectetur dolorum eius, quia asperiores! Error quas quo reprehenderit dolore magnam sint repellendus culpa, nihil placeat qui sunt. Impedit fugit facere culpa error aut distinctio dolorem itaque, porro velit, iste dignissimos eius sapiente nihil id, animi vel nisi soluta quod tempora? Esse amet praesentium facilis doloremque a officiis dolor, quisquam eum molestias nulla sed id, excepturi laboriosam!</p>
+
+            <h3>My dog</h3>
+            <img src="https://images.unsplash.com/photo-1510177087648-3ae3fa149848?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="bae">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quasi molestiae deleniti perferendis hic laborum magni laboriosam fuga fugiat nam sunt nostrum, quod ipsam dolore natus inventore? Iste sunt ut delectus illo at voluptate molestiae deleniti neque nemo, fuga porro consequatur nam veniam blanditiis quaerat distinctio tenetur? Eum nesciunt eos consequatur voluptates voluptatem id earum, explicabo aut enim hic repellendus. Incidunt nam provident dolorum earum consequuntur? Magnam vel amet labore accusantium ea! Temporibus, amet quod.</p>
+        </div>
+    </div>
+
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i> Home</li>
+            <li><i class="fas fa-user-alt"></i> About</li>
+            <li><i class="fas fa-envelope"></i> Contact</li>
+        </ul>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
